# 6.5840-rs

./: .gitignore  Cargo.toml
apps/: Cargo.toml
apps/src/: mrcoordinator.rs  mrsequential.rs  mrworker.rs
libs/mr/: Cargo.toml
libs/mr/DIR/: codex_app_server_protocol.v2.schemas.json
libs/mr/src/: coordinator.rs  lib.rs  mr_test.rs  rpc.rs  util.rs  worker.rs
libs/mrapps/: Cargo.toml
libs/mrapps/src/: indexer.rs  lib.rs  wc.rs
