[package]
name = "apps"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mrsequential"
path = "src/mrsequential.rs"
[[bin]]
name = "mrcoordinator"
path = "src/mrcoordinator.rs"
[[bin]]
name = "mrworker"
path = "src/mrworker.rs"

[dependencies]
mr = { path = "../libs/mr" }
mrapps = { path = "../libs/mrapps" }
tokio = { version = "1.51.1", features = ["full"] }
